// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemsLegend/> empty box 1`] = `
<div
  className="box-viewer-legend"
>
  <table>
    <tbody>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Empty location
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ItemsLegend/> multiple sample types and checked out status, no selection 1`] = `
<div
  className="box-viewer-legend"
>
  <table>
    <tbody>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#fe9200",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            blood
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#009ce0",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            samp18
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#2980b9",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            sampleB
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#F5D4D3",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Checked out/Reserved
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Empty location
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ItemsLegend/> multiple sample types with same color label 1`] = `
<div
  className="box-viewer-legend"
>
  <table>
    <tbody>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#fe9200",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            blood
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#009ce0",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            samp18
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#2980b9",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            sampleB, sampleC
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#F5D4D3",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Checked out/Reserved
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Empty location
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ItemsLegend/> with selection, locked and expired 1`] = `
<div
  className="box-viewer-legend"
>
  <table>
    <tbody>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#fe9200",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            blood
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#009ce0",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            samp18
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#EDF3FF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#fe9200",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            blood selected
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#EDF3FF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#009ce0",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            samp18 selected
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#EDF3FF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#2980b9",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            sampleB selected, sampleC selected
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#EDF3FF",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Empty selected
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "#F5D4D3",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Checked out/Reserved
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-spacing"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <span
              className="cell-lock"
            >
              <span
                className="fa fa-lock"
              />
            </span>
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Restricted
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon expired-form-field"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          >
            <i
              className="color-icon__circle cell-legend-circle"
              style={
                {
                  "backgroundColor": "#009ce0",
                }
              }
            />
          </span>
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Sample expired
          </span>
        </td>
      </tr>
      <tr
        className="cell-legend-row"
      >
        <td>
          <span
            className="cell-legend-icon cell-legend-icon-border"
            style={
              {
                "backgroundColor": "FFFFFF",
              }
            }
          />
        </td>
        <td>
          <span
            className="cell-legend-label"
          >
            Empty location
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
